( navigation ): fix z-index issue

--- a/app/components/molecules/UnorderedList/UnorderedList.module.css
+++ b/app/components/molecules/UnorderedList/UnorderedList.module.css
@@ -1,7 +1,21 @@
 .container {
-  display: flex;
-  height: 50vh;
-  justify-content: space-between;
   list-style-type: none;
-  padding: 2rem;
+}
+
+.container li:nth-of-type(1) {
+  left: 2rem;
+  position: fixed;
+  top: 2rem;
+}
+
+.container li:nth-of-type(2) {
+  right: 2rem;
+  position: fixed;
+  top: 2rem;
+}
+
+.container li:nth-of-type(3) {
+  left: 2rem;
+  position: fixed;
+  bottom: 2rem;
 }
