--- a/app/components/organisms/Navigation/Navigation.module.css
+++ b/app/components/organisms/Navigation/Navigation.module.css
@@ -2,7 +2,6 @@
   color: var(--colorWhite);
   mix-blend-mode: difference;
   position: fixed;
-  width: 100%;
   z-index: 999;
 }
 
